# mandelbrot_set_visualization

./: CMakeLists.txt  README.md  mat_mul.cu
src/: TextureWidget.cpp  TextureWidget.h  kernel.cu  kernel.cuh  main.cpp
